--- a/Python/SudokoSolver.ipynb
+++ b/Python/SudokoSolver.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "## This project is based on Computerphile's Sudoku Solver (https://www.youtube.com/watch?v=G_UYXzGuqvM)\n",
@@ -49,8 +51,7 @@
     "                return False\n",
     "    return True\n",
     "\n",
-    "def solve():\n",
-    "    start = timer()\n",
+    "def solve(start=timer()):\n",
     "    global grid\n",
     "    for i in range (0, 9):\n",
     "        for j in range (0, 9):\n",
@@ -64,53 +65,62 @@
     "    disp()\n",
     "    end = timer()\n",
     "    elapsedTime = end - start\n",
-    "    print(\"Found solution in {} seconds\".format(elapsedTime))\n",
-    "    \n",
+    "    print(\"Found solution in {} seconds\".format(round(elapsedTime,8)))\n",
+    "    return\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "upload_grid([[0, 2, 0, 0, 0, 0, 0, 0, 0],\n",
-    "             [7, 0, 6, 0, 5, 3, 0, 0, 0],\n",
-    "             [0, 4, 0, 9, 6, 0, 3, 0, 8],\n",
-    "             [0, 1, 4, 0, 0, 0, 0, 0, 0],\n",
-    "             [6, 7, 0, 0, 0, 0, 0, 3, 9],\n",
-    "             [0, 0, 0, 0, 0, 0, 1, 4, 0],\n",
-    "             [8, 0, 9, 0, 7, 4, 0, 2, 0],\n",
-    "             [0, 0, 0, 1, 9, 0, 7, 0, 3],\n",
-    "             [0, 0, 0, 0, 0, 0, 0, 5, 0]])"
+    "upload_grid([[8, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "             [0, 0, 3, 6, 0, 0, 0, 0, 0],\n",
+    "             [0, 7, 0, 0, 9, 0, 2, 0, 0],\n",
+    "             [0, 5, 0, 0, 0, 7, 0, 0, 0],\n",
+    "             [0, 0, 0, 0, 4, 5, 7, 0, 0],\n",
+    "             [0, 0, 0, 1, 0, 0, 0, 3, 0],\n",
+    "             [0, 0, 1, 0, 0, 0, 0, 6, 8],\n",
+    "             [0, 0, 8, 5, 0, 0, 0, 1, 0],\n",
+    "             [0, 9, 0, 0, 0, 0, 4, 0, 0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 2 8 7 4 1 5 9 6]\n",
-      " [7 9 6 8 5 3 4 1 2]\n",
-      " [5 4 1 9 6 2 3 7 8]\n",
-      " [2 1 4 5 3 9 8 6 7]\n",
-      " [6 7 5 4 1 8 2 3 9]\n",
-      " [9 8 3 6 2 7 1 4 5]\n",
-      " [8 5 9 3 7 4 6 2 1]\n",
-      " [4 6 2 1 9 5 7 8 3]\n",
-      " [1 3 7 2 8 6 9 5 4]]\n",
-      "Found solution in 0.0004074949993082555 seconds\n"
+      "[[8 1 2 7 5 3 6 4 9]\n",
+      " [9 4 3 6 8 2 1 7 5]\n",
+      " [6 7 5 4 9 1 2 8 3]\n",
+      " [1 5 4 2 3 7 8 9 6]\n",
+      " [3 6 9 8 4 5 7 2 1]\n",
+      " [2 8 7 1 6 9 5 3 4]\n",
+      " [5 2 1 9 7 4 3 6 8]\n",
+      " [4 3 8 5 2 6 9 1 7]\n",
+      " [7 9 6 3 1 8 4 5 2]]\n",
+      "Found solution in 19.56071816 seconds\n"
      ]
     }
    ],
    "source": [
     "solve()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
