final working day before deadline, 3d-plotter is still a mess

--- a/3D-House-Project/Code/splitter.ipynb
+++ b/3D-House-Project/Code/splitter.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "**Box and Point Class**\n",
     "\n",
-    "A class to better store bounds as a Box object, with a method to check within a point is inside a box"
+    "A class to better store bounds as a Box object, with a method to check whether a point is withinside a box."
    ]
   },
   {
@@ -62,9 +62,11 @@
     "            self.left, self.bottom, \n",
     "            self.right, self.top, \n",
     "            self.width, self.height)\n",
-    "    # in_bounds gets a x- and y-coordinate from a point, and an optional string (either 'exc' or 'inc')\n",
-    "    # and returns whether that points is inside this box (either excluding or including the border area)\n",
     "    def in_bounds(self, x, y, op='exc') -> bool:\n",
+    "        '''\n",
+    "        in_bounds gets a x- and y-coordinate from a point, and an optional string (either 'exc' or 'inc')\n",
+    "        and returns whether that points is inside this box (either excluding or including the border area)\n",
+    "        '''\n",
     "        if op == 'exc':\n",
     "            return self.left < x < self.right and self.bottom < y < self.top\n",
     "        elif op == 'inc':\n",
@@ -246,9 +248,11 @@
     "\n",
     "\n",
     "def search_files(fpath: str, file_type: str, func):\n",
+    "    '''\n",
+    "    Walk through the folder containing the data, and check if the files match the file type\n",
+    "    If so; open that file, and print how many there were found\n",
+    "    '''\n",
     "    total_files = 0\n",
-    "    # Walk through the folder containing the data, and check if the files match the file type\n",
-    "    # If so; open that file, and print how many there were found\n",
     "    for root, dirs, files in os.walk(fpath):\n",
     "        for name in files:\n",
     "            if name.endswith(file_type):\n",
@@ -271,12 +275,15 @@
    "source": [
     "# a function to pass as an argument to the search_files function\n",
     "def tifsplit(filepath):\n",
+    "    '''\n",
+    "    Call the subdivide fuction, with the new name, opened tif, and do 5 recursion divides on every file.\n",
+    "    This will split every file into 1024 smaller files.\n",
+    "    '''\n",
     "    tif = rio.open(filepath)\n",
+    "    \n",
     "    # change name from /media/ ... /GeoTIFF/DHMVIIDSMRAS1m_k16.tif\n",
     "    #               to /media/ ... /GeoTIFF/DHMVIIDSMRAS1m_k16\n",
     "    name = filepath[:-4]\n",
-    "    # call the subdivide fuction, with the new name, opened tif, and do 5 recursion divides on every file.\n",
-    "    # this will split every file into 1024 smaller files\n",
     "    subdivide(name, tif, 5)\n",
     "\n",
     "# call searchfiles, and do a tifsplit on every tif file in the data path    \n",
